@@ -1,6 +1,7 @@
 Revision history for {{ $dist->name }}
 
 {{ $NEXT }}
+    - Send sms 3 day after target day or user target day (#1)
     - Fix datetime calculation bug (#2)
     - Send sms 2 day after target day or user target day (#1)
 
